Update OSI API
Fixes #224